# dihiggs

./: LICENSE  README.md  pyproject.toml
code/: dnnutil.py  heft_gauss_train.ipynb  heft_gauss_train.py  heft_prepare_traindata.ipynb  heft_train.ipynb  heftnet.py
data/: heft_gauss_spectra.csv  heft_wide_gauss_testdata_13TeV.csv  powheg_total_gauss_params.csv
dihiggs/: __init__.py  nn.py
dihiggs/utils/: data.py  monitor.py
