[project]
name = "dihiggs"
version = "0.1.0"
description = "Modeling the di-Higgs differential cross section."
readme = "README.md"
authors = [
  { name="Harrison B. Prosper", email="hprosper@fsu.edu" }
]
license = { text = "MIT" }
dependencies = [
  # e.g. "numpy>=1.20", "requests"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
monlosses = "dihiggs.bin.monitor_losses:main"

[project.urls]
"Homepage" = "https://github.com/hbprosper/dihiggs"
